TAG: homologyload-tr11886-7
TAG: homologyload-tr11886-6 (this tag has bug)
TAG: homologyload-tr11886-5
DATE: 12/24/2014
STAFF: sc
CHANGES:
1) common.config.default - added
2) homologeneload.config.default - factored common settings out
3) hgncload.config.default - factored common settings out
4) Install, all .sh wrappers added sourcing of common.config
5) Added bin/homologyload.sh, this is now the wrapper that runs the NON
   HomoloGene loads
6) Added preprocessHomologene.sh, convenience script to run HomoloGene
   pre processor

TAG: homologyload-tr11886-4
DATE: 12/24/2014
STAFF: sc
CHANGES:
1) homologeneload.config.default - updated  *homology* to *homologene*
2) bin/homologeneload.sh - updated runQC.sh to preprocessHomologene.sh, 
	updated homologyload.config to homologeneload.config
	updated homologyload.py to homologeneload.py

TAG: homologyload-tr11886-3
TAG: homologyload-tr11886-2
DATE: 12/24/2014
STAFF: sc
CHANGES: 
1) preprocessHGNC.py - removed cluster function (factored out in last tag)
    also create list of list to pass to clusterizer rather than file
2) clusterize.py - take list of list as parameter rather than file, return
    a dictionary

TAG: homologyload-tr11886-1
DATE: 12/24/2014
STAFF: sc
CHANGES: Initial tag with
1) preprocessHGNC.py/sh - renamed from runHGNCQC.py/sh
2) new clusterer.py
3) config for hgnc
4) Install - hgnc added

TAG: homologyload-tr11886-BP
DATE: 12/22/2014
STAFF: sc
CHANGES: TR11886 - M&M

TAG: homologyload-5-1-9-1
DATE: 7/31/2014
STAFF: dbm
CHANGES: TR11662
1) homologyload.config.default: Added taxon ID 8364 for Xenopus

TAG: homologyload-5-1-7-1
DATE: 01/28/2014
STAFF: lec
CHANGES:
1) TR11584/media wiki change

TAG: homologyload-5-1-4-1
DATE: 06/27/2013
STAFF: dbm
RELEASE:
CHANGES: index.html - removed 'scrum-bob'

TAG: homologyload-5-1-3-1
DATE: 04/16/2013
STAFF: dbm
RELEASE:
CHANGES: N2MO release tag

TAG: mrkcoordload-5-1-1-5
TAG: mrkcoordload-5-1-1-4
DATE: 01/14/2013
STAFF: sc
RELEASE: dev